commit melhorar no codigo

--- a/index-02.html
+++ b/index-02.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Validação de Números</h1>
+        <h1>Exercicio Ebac</h1>
+        <h2>Campo A - Campo B </h2>
+        
         <form id="form-numeros">
             <input type="number" id="campoA" required placeholder="Campo A" />
             <input type="number" id="campoB" required placeholder="Campo B" />
-            <button id="btn-submeter" type="submit">Submeter</button>
+            <button id="btn-submeter" type="submit">Calcular</button>
             <p class="error-message">O valor de Campo B deve ser maior que Campo A.</p>
         </form>
         <p class="success-message"></p>
